human-intervention-logs/com.github.java-json-tools:json-patch:1.13/gradle-test/gradle-test-2026-05-02T15-27-52-859681Z.log
> Task :tck-build-logic:extractPluginRequests UP-TO-DATE
> Task :tck-build-logic:generatePluginAdapters UP-TO-DATE
> Task :tck-build-logic:compileJava UP-TO-DATE
> Task :tck-build-logic:compileGroovy UP-TO-DATE
> Task :tck-build-logic:compileGroovyPlugins UP-TO-DATE
> Task :tck-build-logic:pluginDescriptors UP-TO-DATE
> Task :tck-build-logic:processResources UP-TO-DATE
> Task :tck-build-logic:classes UP-TO-DATE
> Task :tck-build-logic:jar UP-TO-DATE

> Configure project :
GraalVM Reachability Metadata TCK
---------------------------------

> Task :tckTest
====================
Testing library: com.github.java-json-tools:json-patch:1.13
Command: `/home/vjovanov/c/forge/forge4/graalvm-reachability-metadata/forge/local_repositories/forge_worktrees/3301-d1b648b9/gradlew nativeTest`
Executing test...
-------
Starting a Gradle Daemon, 13 busy and 7 incompatible and 199 stopped Daemons could not be reused, use --status for details
> Task :tck-build-logic:extractPluginRequests UP-TO-DATE
> Task :tck-build-logic:generatePluginAdapters UP-TO-DATE
> Task :tck-build-logic:compileJava UP-TO-DATE
> Task :tck-build-logic:compileGroovy UP-TO-DATE
> Task :tck-build-logic:compileGroovyPlugins UP-TO-DATE
> Task :tck-build-logic:pluginDescriptors UP-TO-DATE
> Task :tck-build-logic:processResources UP-TO-DATE
> Task :tck-build-logic:classes UP-TO-DATE
> Task :tck-build-logic:jar UP-TO-DATE
> Task :compileJava NO-SOURCE
> Task :processResources NO-SOURCE
> Task :classes UP-TO-DATE
> Task :tck-test-support:compileJava UP-TO-DATE
> Task :tck-test-support:processResources NO-SOURCE
> Task :tck-test-support:classes UP-TO-DATE
> Task :tck-test-support:jar UP-TO-DATE
> Task :jar

> Task :compileTestJava FAILED
/home/vjovanov/c/forge/forge4/graalvm-reachability-metadata/forge/local_repositories/forge_worktrees/3301-d1b648b9/tests/src/com.github.java-json-tools/json-patch/1.13/src/test/java/com_github_java_json_tools/json_patch/Json_patchTest.java:71: error: reference to assertThat is ambiguous
        assertThat(MAPPER.valueToTree(patch)).isEqualTo(patchJson);
        ^
  both method assertThat(IntPredicate) in Assertions and method <T>assertThat(Predicate<T>) in Assertions match
  where T is a type-variable:
    T extends Object declared in method <T>assertThat(Predicate<T>)
/home/vjovanov/c/forge/forge4/graalvm-reachability-metadata/forge/local_repositories/forge_worktrees/3301-d1b648b9/tests/src/com.github.java-json-tools/json-patch/1.13/src/test/java/com_github_java_json_tools/json_patch/Json_patchTest.java:173: error: reference to assertThat is ambiguous
        assertThat(MAPPER.valueToTree(patch)).isEqualTo(patchJson);
        ^
  both method assertThat(IntPredicate) in Assertions and method <T>assertThat(Predicate<T>) in Assertions match
  where T is a type-variable:
    T extends Object declared in method <T>assertThat(Predicate<T>)
2 errors

FAILURE: Build failed with an exception.

* What went wrong:
Execution failed for task ':compileTestJava'.
> Compilation failed; see the compiler output below.
  /home/vjovanov/c/forge/forge4/graalvm-reachability-metadata/forge/local_repositories/forge_worktrees/3301-d1b648b9/tests/src/com.github.java-json-tools/json-patch/1.13/src/test/java/com_github_java_json_tools/json_patch/Json_patchTest.java:71: error: reference to assertThat is ambiguous
          assertThat(MAPPER.valueToTree(patch)).isEqualTo(patchJson);
          ^
    both method assertThat(IntPredicate) in Assertions and method <T>assertThat(Predicate<T>) in Assertions match
    where T is a type-variable:
      T extends Object declared in method <T>assertThat(Predicate<T>)
  /home/vjovanov/c/forge/forge4/graalvm-reachability-metadata/forge/local_repositories/forge_worktrees/3301-d1b648b9/tests/src/com.github.java-json-tools/json-patch/1.13/src/test/java/com_github_java_json_tools/json_patch/Json_patchTest.java:173: error: reference to assertThat is ambiguous
          assertThat(MAPPER.valueToTree(patch)).isEqualTo(patchJson);
          ^
    both method assertThat(IntPredicate) in Assertions and method <T>assertThat(Predicate<T>) in Assertions match
    where T is a type-variable:
      T extends Object declared in method <T>assertThat(Predicate<T>)
  2 errors

* Try:
> Check your code and dependencies to fix the compilation error(s)
> Run with --scan to generate a Build Scan (Powered by Develocity).

BUILD FAILED in 19s

[Incubating] Problems report is available at: file:///home/vjovanov/c/forge/forge4/graalvm-reachability-metadata/forge/local_repositories/forge_worktrees/3301-d1b648b9/tests/src/com.github.java-json-tools/json-patch/1.13/build/reports/problems/problems-report.html

Deprecated Gradle features were used in this build, making it incompatible with Gradle 10.

You can use '--warning-mode all' to show the individual deprecation warnings and determine if they come from your own scripts or plugins.

For more on this, please refer to https://docs.gradle.org/9.1.0/userguide/command_line_interface.html#sec:command_line_warnings in the Gradle documentation.
12 actionable tasks: 2 executed, 10 up-to-date

> Task :tckTest FAILED

[Incubating] Problems report is available at: file:///home/vjovanov/c/forge/forge4/graalvm-reachability-metadata/forge/local_repositories/forge_worktrees/3301-d1b648b9/build/reports/problems/problems-report.html

FAILURE: Build failed with an exception.

* What went wrong:
Execution failed for task ':tckTest'.
> Test for com.github.java-json-tools:json-patch:1.13 failed with exit code 1.

* Try:
> Run with --stacktrace option to get the stack trace.
> Run with --info or --debug option to get more log output.
> Run with --scan to generate a Build Scan (Powered by Develocity).
> Get more help at https://help.gradle.org.

Deprecated Gradle features were used in this build, making it incompatible with Gradle 10.

You can use '--warning-mode all' to show the individual deprecation warnings and determine if they come from your own scripts or plugins.

For more on this, please refer to https://docs.gradle.org/9.1.0/userguide/command_line_interface.html#sec:command_line_warnings in the Gradle documentation.

BUILD FAILED in 23s
9 actionable tasks: 1 executed, 8 up-to-date
